fixed adversarial testing

--- a/AdversarialTesting.ipynb
+++ b/AdversarialTesting.ipynb
@@ -20,38 +20,157 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "import torchvision\n",
+        "import torchvision.transforms as transforms\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torchattacks import PGD, FGSM, VANILA, GN, Jitter #Ben: trying out some more attacks\n",
+        "from torchvision import datasets, transforms\n",
+        "import torchvision.models as models\n",
+        "from torch.utils.data import DataLoader\n",
+        "import random"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 84,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading model\n"
+          ]
+        }
+      ],
+      "source": [
+        "# temporary: copying the code to load the model\n",
+        "device = torch.device(\"cpu\")\n",
+        "\n",
+        "train_transform =  transforms.Compose([\n",
+        "    transforms.RandomResizedCrop(size = 224, scale=(0.8, 1.0)),\n",
+        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+        "])\n",
+        "\n",
+        "#Test does not use augmentation, only normalization is being performed.\n",
+        "test_transform = transforms.Compose([\n",
+        "    transforms.Resize(224),\n",
+        "    transforms.CenterCrop(size = 224),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+        "])\n",
+        "\n",
+        "# Set the directory for saving the dataset\n",
+        "# data_dir = '/content/drive/My Drive/FinalProject1'\n",
+        "data_dir = './data'\n",
+        "\n",
+        "# Load datasets, first time you need to download it (may take a while). After that it should just pull the local copy\n",
+        "train_dataset = datasets.Food101(root=data_dir, split='train', download=True, transform=train_transform)\n",
+        "test_dataset = datasets.Food101(root=data_dir, split='test', download=True, transform=test_transform)\n",
+        "\n",
+        "# Dataloaders, may need to change # of workers or batchsize to improve performance\n",
+        "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True,num_workers=4)\n",
+        "\n",
+        "# Pretrained model, efficient architecture\n",
+        "model = models.efficientnet_b2(weights='DEFAULT')\n",
+        "\n",
+        "# If false, then pretrained weights do not change\n",
+        "# for val in model.features.parameters():\n",
+        "#   val.requires_grad = False\n",
+        "\n",
+        "# Add one more layer to base model and then add an output layer\n",
+        "model.classifier = nn.Sequential(\n",
+        "    nn.Linear(model.classifier[1].in_features, 1024),\n",
+        "    nn.ReLU(),\n",
+        "    nn.Linear(1024, len(train_dataset.classes))\n",
+        ")\n",
+        "\n",
+        "print(\"Loading model\")\n",
+        "# Path to the .pth file\n",
+        "model_path = 'results/bestmodel.pth'\n",
+        "\n",
+        "# Load the state dictionary from the .pth file\n",
+        "state_dict = torch.load(model_path)\n",
+        "\n",
+        "# Load the state dictionary into the model\n",
+        "model.load_state_dict(state_dict)\n",
+        "\n",
+        "# Put model onto gpu\n",
+        "model = model.to(device)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 85,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def general_PGD(model, loss_function, data, proj_norm=2, radius=0.03, lr=0.01, steps=10):\n",
+        "\n",
+        "  features, labels = data\n",
+        "  features = features.clone().detach().to(device)\n",
+        "  labels = labels.clone().detach().to(device)\n",
+        "\n",
+        "  adv_features = features.clone().detach()\n",
+        "\n",
+        "  #maximize loss wrt feature perturbations, for fixed network parameters\n",
+        "  for _ in range(steps):\n",
+        "    adv_features.requires_grad = True\n",
+        "\n",
+        "    #model prediction\n",
+        "    pred = model(adv_features)\n",
+        "\n",
+        "    #error calculation\n",
+        "    error = loss_function(pred, labels)\n",
+        "\n",
+        "    #gradient descend\n",
+        "    grad = torch.autograd.grad(error, adv_features)[0] #grad:(1, 64, 3, 224, 224), where the first coordinate if the batch number?\n",
+        "    grad_norm = torch.norm(grad, p=proj_norm, dim=[1,2,3]) #normalize the gradient according to paper https://arxiv.org/pdf/1706.06083\n",
+        "    grad = grad / grad_norm.view(-1,1,1,1)\n",
+        "\n",
+        "    adv_features = adv_features.detach() + lr * grad\n",
+        "\n",
+        "    #projection: |features - adv_features|_{norm} < radius\n",
+        "    orig_diff = features - adv_features\n",
+        "    orig_diff_norm = torch.norm(orig_diff, p=proj_norm, dim=[1,2,3])\n",
+        "    normalization = radius / orig_diff_norm\n",
+        "\n",
+        "    diff = orig_diff * normalization.view(-1,1,1,1)\n",
+        "\n",
+        "    adv_features = (features - diff).detach()\n",
+        "\n",
+        "  return adv_features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 88,
       "metadata": {
         "id": "VS-eLjsN5DQn"
       },
       "outputs": [],
       "source": [
-        "# copied from above.\n",
-        "\n",
-        "PATH = \"/content/drive/My Drive/model.pth\"\n",
-        "\n",
-        "model = models.efficientnet_b0(weights='DEFAULT')\n",
-        "\n",
-        "for val in model.features.parameters():\n",
-        "      val.requires_grad = False\n",
-        "\n",
-        "model.classifier = nn.Sequential(\n",
-        "    nn.Linear(model.classifier[1].in_features, 1024),\n",
-        "    nn.ReLU(),\n",
-        "    nn.Linear(1024, len(trainset.classes))\n",
-        ")\n",
-        "\n",
-        "model.load_state_dict(torch.load(PATH))\n",
-        "model.eval()\n",
-        "\n",
         "# parameters setting\n",
         "loss_function = nn.CrossEntropyLoss()\n",
         "proj_norm=2\n",
         "lr=0.001\n",
         "radius=0.01\n",
-        "data = next(iter(trainloader))\n",
         "\n",
-        "adv_features = general_PGD(model, loss_function, data, proj_norm=2, radius=0.03, lr=0.01, steps=10)"
+        "num_batches = 2 # how many batches to use?\n",
+        "data = next(iter(test_loader))\n",
+        "for i in range(num_batches - 1):\n",
+        "    batch = next(iter(test_loader))\n",
+        "    data[0] = torch.concat((data[0], batch[0]))\n",
+        "    data[1] = torch.concat((data[1], batch[1]))"
       ]
     },
     {
@@ -65,11 +184,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 90,
       "metadata": {
         "id": "WVjGPpjyyg75"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "a\n",
+            "b\n"
+          ]
+        }
+      ],
       "source": [
         "eps = 0.03 # the adversarial tolerance\n",
         "\n",
@@ -77,31 +205,27 @@
         "fgsm_attack = FGSM(model, eps=eps)\n",
         "\n",
         "# Gaussian noise attack\n",
-        "gaussian_noise_attack = GN(model, std=0.1)\n",
+        "gaussian_noise_attack = GN(model, std=eps)\n",
         "\n",
         "# Jitter attack\n",
         "jitter_attack = Jitter(model, eps=eps, steps=10)\n",
         "\n",
-        "adv_images_fgsm, adv_images_gaussian,  adv_images_jitter, adv_images_pgd =\\\n",
-        " None, None, None, adv_features\n",
+        "\n",
         "# Iterate through the test loader\n",
         "images, labels = data\n",
+        "\n",
+        "# adv_features = general_PGD(model, loss_function, data, proj_norm=2, radius=0.03, lr=0.01, steps=10)\n",
+        "pgd_attack = PGD(model, eps=eps)\n",
+        "\n",
+        "adv_images_fgsm, adv_images_gaussian,  adv_images_jitter, adv_images_pgd, adv_images_nothing =\\\n",
+        " None, None, None, None, images\n",
+        "\n",
+        "\n",
         "# Apply attacks\n",
-        "adv_images_fgsm = fgsm_attack(images, labels)\n",
-        "adv_images_gaussian = gaussian_noise_attack(images, labels)\n",
-        "adv_images_jitter = jitter_attack(images, labels)\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "rVVxOkkO6bfE"
-      },
-      "outputs": [],
-      "source": [
-        "adv_images_nothing = images"
+        "adv_images_fgsm = images.to(device) + fgsm_attack(images, labels)\n",
+        "adv_images_gaussian = images.to(device) + gaussian_noise_attack(images, labels)\n",
+        "adv_images_jitter = images.to(device) + jitter_attack(images, labels)\n",
+        "adv_images_pgd = images.to(device) + pgd_attack(images, labels)"
       ]
     },
     {
@@ -115,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 91,
       "metadata": {
         "id": "ZqE-nIPV2wCV"
       },
@@ -134,15 +258,12 @@
         "        return len(self.data)\n",
         "\n",
         "    def __getitem__(self, idx):\n",
-        "        return self.data[idx], self.labels[idx]\n",
-        "\n",
-        "\n",
-        "\n"
+        "        return self.data[idx], self.labels[idx]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 92,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -150,15 +271,7 @@
         "id": "Pr3yArop1aBp",
         "outputId": "5c758a1a-9bd3-48bd-bedd-44e1aea33d05"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Accuracy on adversarial examples: 12.50%\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Define a function to evaluate model accuracy\n",
         "def evaluate_model(model, dataloader):\n",
@@ -182,6 +295,7 @@
         "            # Update total and correct predictions\n",
         "            total += labels.size(0)\n",
         "            correct += (predicted == labels).sum().item()\n",
+        "            \n",
         "\n",
         "    # Calculate accuracy\n",
         "    accuracy = (correct / total) * 100\n",
@@ -191,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 93,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -205,15 +319,15 @@
           "output_type": "stream",
           "text": [
             "Adversarial Attack with attack=none\n",
-            "Accuracy on adversarial examples: 1.56%\n",
+            "Accuracy on adversarial examples: 73.44%\n",
             "Adversarial Attack with attack=fgsm\n",
-            "Accuracy on adversarial examples: 12.50%\n",
+            "Accuracy on adversarial examples: 37.50%\n",
             "Adversarial Attack with attack=gaussian noise\n",
-            "Accuracy on adversarial examples: 1.56%\n",
+            "Accuracy on adversarial examples: 65.62%\n",
             "Adversarial Attack with attack=jitter\n",
-            "Accuracy on adversarial examples: 0.00%\n",
+            "Accuracy on adversarial examples: 60.94%\n",
             "Adversarial Attack with attack=pgd\n",
-            "Accuracy on adversarial examples: 1.56%\n"
+            "Accuracy on adversarial examples: 51.56%\n"
           ]
         }
       ],
@@ -226,7 +340,7 @@
         "  adversarial_dataset = AdversarialDataset(adv_data, labels)\n",
         "\n",
         "  # Define a DataLoader for the adversarial examples\n",
-        "  adversarial_loader = DataLoader(adversarial_dataset, batch_size=64, shuffle=False)\n",
+        "  adversarial_loader = DataLoader(adversarial_dataset, batch_size=100, shuffle=False)\n",
         "  evaluate_model(model, adversarial_loader)"
       ]
     }
@@ -242,7 +356,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
