Pre-Final Commit

--- a/AdversarialTesting.ipynb
+++ b/AdversarialTesting.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -51,7 +51,7 @@
       ],
       "source": [
         "# temporary: copying the code to load the model\n",
-        "device = torch.device(\"cpu\")\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "train_transform =  transforms.Compose([\n",
         "    transforms.RandomResizedCrop(size = 224, scale=(0.8, 1.0)),\n",
@@ -69,7 +69,6 @@
         "])\n",
         "\n",
         "# Set the directory for saving the dataset\n",
-        "# data_dir = '/content/drive/My Drive/FinalProject1'\n",
         "data_dir = './data'\n",
         "\n",
         "# Load datasets, first time you need to download it (may take a while). After that it should just pull the local copy\n",
@@ -78,14 +77,11 @@
         "\n",
         "# Dataloaders, may need to change # of workers or batchsize to improve performance\n",
         "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)\n",
-        "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True,num_workers=4)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True, num_workers=4)\n",
         "\n",
         "# Pretrained model, efficient architecture\n",
+        "# https://paperswithcode.com/sota/fine-grained-image-classification-on-food-101\n",
         "model = models.efficientnet_b2(weights='DEFAULT')\n",
-        "\n",
-        "# If false, then pretrained weights do not change\n",
-        "# for val in model.features.parameters():\n",
-        "#   val.requires_grad = False\n",
         "\n",
         "# Add one more layer to base model and then add an output layer\n",
         "model.classifier = nn.Sequential(\n",
@@ -110,11 +106,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 14,
+      "metadata": {
+        "id": "VS-eLjsN5DQn"
+      },
+      "outputs": [],
+      "source": [
+        "# parameters setting\n",
+        "loss_function = nn.CrossEntropyLoss()\n",
+        "proj_norm=2\n",
+        "lr=0.001\n",
+        "radius=0.01\n",
+        "\n",
+        "num_batches = 10 # how many batches to use?\n",
+        "data = next(iter(test_loader))\n",
+        "for i in range(num_batches - 1):\n",
+        "    batch = next(iter(test_loader))\n",
+        "    data[0] = torch.concat((data[0], batch[0]))\n",
+        "    data[1] = torch.concat((data[1], batch[1]))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def general_PGD(model, loss_function, data, proj_norm=2, radius=0.03, lr=0.01, steps=10):\n",
+        "def general_PGD(model, loss_function, data, proj_norm=2, radius=0.03, lr=0.001, steps=10):\n",
         "\n",
         "  features, labels = data\n",
         "  features = features.clone().detach().to(device)\n",
@@ -123,7 +141,7 @@
         "  adv_features = features.clone().detach()\n",
         "\n",
         "  #maximize loss wrt feature perturbations, for fixed network parameters\n",
-        "  for _ in range(steps):\n",
+        "  for i in range(steps):\n",
         "    adv_features.requires_grad = True\n",
         "\n",
         "    #model prediction\n",
@@ -148,29 +166,7 @@
         "\n",
         "    adv_features = (features - diff).detach()\n",
         "\n",
-        "  return adv_features"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 94,
-      "metadata": {
-        "id": "VS-eLjsN5DQn"
-      },
-      "outputs": [],
-      "source": [
-        "# parameters setting\n",
-        "loss_function = nn.CrossEntropyLoss()\n",
-        "proj_norm=2\n",
-        "lr=0.001\n",
-        "radius=0.01\n",
-        "\n",
-        "num_batches = 10 # how many batches to use?\n",
-        "data = next(iter(test_loader))\n",
-        "for i in range(num_batches - 1):\n",
-        "    batch = next(iter(test_loader))\n",
-        "    data[0] = torch.concat((data[0], batch[0]))\n",
-        "    data[1] = torch.concat((data[1], batch[1]))"
+        "  return adv_features\n"
       ]
     },
     {
@@ -184,13 +180,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 16,
       "metadata": {
         "id": "WVjGPpjyyg75"
       },
       "outputs": [],
       "source": [
         "eps = 0.03 # the adversarial tolerance\n",
+        "\n",
         "\n",
         "# FGSM (Fast Gradient Sign Method) attack\n",
         "fgsm_attack = FGSM(model, eps=eps)\n",
@@ -216,7 +213,9 @@
         "adv_images_fgsm = images.to(device) + fgsm_attack(images, labels)\n",
         "adv_images_gaussian = images.to(device) + gaussian_noise_attack(images, labels)\n",
         "adv_images_jitter = images.to(device) + jitter_attack(images, labels)\n",
-        "adv_images_pgd = images.to(device) + pgd_attack(images, labels)"
+        "adv_images_pgd = images.to(device) + pgd_attack(images, labels)\n",
+        "# Our PGD\n",
+        "our_pgd_attack = general_PGD(model, loss_function=loss_function, data=(images, labels))"
       ]
     },
     {
@@ -230,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 17,
       "metadata": {
         "id": "ZqE-nIPV2wCV"
       },
@@ -254,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -296,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -310,22 +309,24 @@
           "output_type": "stream",
           "text": [
             "Adversarial Attack with attack=none\n",
-            "Accuracy on adversarial examples: 77.81%\n",
+            "Accuracy on adversarial examples: 78.12%\n",
             "Adversarial Attack with attack=fgsm\n",
-            "Accuracy on adversarial examples: 41.56%\n",
+            "Accuracy on adversarial examples: 40.00%\n",
             "Adversarial Attack with attack=gaussian noise\n",
-            "Accuracy on adversarial examples: 67.19%\n",
+            "Accuracy on adversarial examples: 65.31%\n",
             "Adversarial Attack with attack=jitter\n",
-            "Accuracy on adversarial examples: 67.19%\n",
+            "Accuracy on adversarial examples: 64.06%\n",
             "Adversarial Attack with attack=pgd\n",
-            "Accuracy on adversarial examples: 62.50%\n"
+            "Accuracy on adversarial examples: 60.62%\n",
+            "Adversarial Attack with attack=our_pgd\n",
+            "Accuracy on adversarial examples: 76.56%\n"
           ]
         }
       ],
       "source": [
-        "attacks = [\"none\", \"fgsm\", \"gaussian noise\", \"jitter\", \"pgd\"]\n",
+        "attacks = [\"none\", \"fgsm\", \"gaussian noise\", \"jitter\", \"pgd\", \"our_pgd\"]\n",
         "\n",
-        "for attack, adv_data in zip(attacks, [adv_images_nothing, adv_images_fgsm, adv_images_gaussian, adv_images_jitter, adv_images_pgd]):\n",
+        "for attack, adv_data in zip(attacks, [adv_images_nothing, adv_images_fgsm, adv_images_gaussian, adv_images_jitter, adv_images_pgd, our_pgd_attack]):\n",
         "  print(f\"Adversarial Attack with attack={attack}\")\n",
         "  # Convert adversarial examples to a dataset\n",
         "  adversarial_dataset = AdversarialDataset(adv_data, labels)\n",
@@ -356,7 +357,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
